--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "axios": "^0.18.0",
+    "firebase": "^5.0.4",
+    "nprogress": "^0.2.0",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
-    "axios": "^0.18.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
