--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-wysiwyg": "^1.7.2",
     "vuefire": "^1.4.5",
     "vuex": "^3.0.1"
   },
