--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cxlt-vue2-toastr": "^1.1.0",
     "firebase": "^5.0.4",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
