--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cxlt-vue2-toastr": "^1.1.0",
-    "firebase": "^5.0.4",
+    "firebase": "^5.2.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "nprogress": "^0.2.0",
@@ -20,7 +20,8 @@
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
     "vuefire": "^1.4.5",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuexfire": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
